# BEP.AI-CORE

./: Cargo.toml  INSTALL.md  README.md
bep-core/: Cargo.toml  README.md
bep-core/bep-core-derive/: Cargo.toml
bep-core/bep-core-derive/src/: embed.rs
bep-core/examples/: agent.rs  agent_with_context.rs  agent_with_grok.rs  agent_with_loaders.rs  agent_with_ollama.rs  agent_with_tools.rs  anthropic_agent.rs  calculator_chatbot.rs  chain.rs  cohere_connector.rs  debate.rs  extractor.rs  gemini_agent.rs  gemini_embeddings.rs  loaders.rs  multi_agent.rs  multi_extract.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  sentiment_classifier.rs  simple_model.rs  vector_search.rs  vector_search_cohere.rs  xai_embeddings.rs
bep-core/src/: agent.rs  completion.rs  extractor.rs  lib.rs  tool.rs
bep-core/src/embeddings/: builder.rs  embed.rs  tool.rs
bep-core/src/loaders/: file.rs  pdf.rs
bep-core/src/pipeline/: mod.rs  op.rs  try_op.rs
bep-core/src/providers/: cohere.rs  mod.rs  openai.rs  perplexity.rs
bep-core/src/providers/anthropic/: client.rs  completion.rs  mod.rs
bep-core/src/providers/gemini/: client.rs  completion.rs  mod.rs
bep-core/src/providers/xai/: client.rs  completion.rs  mod.rs
bep-core/src/vector_store/: in_memory_store.rs
bep-core/tests/: embed_macro.rs
bep-lancedb/: Cargo.toml  README.md
bep-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
bep-lancedb/src/: lib.rs
bep-lancedb/src/utils/: deserializer.rs  mod.rs
bep-lancedb/tests/: integration_tests.rs
bep-lancedb/tests/fixtures/: lib.rs
bep-mongodb/: Cargo.toml  README.md
bep-mongodb/examples/: vector_search_mongodb.rs
bep-mongodb/src/: lib.rs
bep-mongodb/tests/: integration_tests.rs
bep-neo4j/: Cargo.toml  README.md
bep-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
bep-neo4j/src/: lib.rs  vector_index.rs
bep-neo4j/tests/: integration_tests.rs
bep-qdrant/: Cargo.toml  README.md
bep-qdrant/examples/: qdrant_vector_search.rs
bep-qdrant/src/: lib.rs
bep-qdrant/tests/: integration_tests.rs
bep-sqlite/: Cargo.toml  README.md
bep-sqlite/examples/: vector_search_sqlite.rs
bep-sqlite/src/: lib.rs
workflows/ISSUE_TEMPLATE/: bug_report.md
